Adiciona funcionalidades de importação/exportação PLC
- MainWindow.xaml: Atualiza título, define dimensões mínimas e inicia maximizado. Adiciona coluna ao Grid e ajusta frames.
- Projeto.cs: Importa bibliotecas, torna _apiWrapper readonly, adiciona ExportPath, modifica métodos para usar SiemensApiWrapper e OpenFileDialog, adiciona métodos para listar blocos e procurar caminho de exportação.
- SiemensApiWrapper.cs: Importa bibliotecas, adiciona métodos para listar e exportar blocos PLC, e obter softwares PLC.
- MainViewModel.cs: Cria classe MainViewModel com propriedade ProjetoViewModel.
- ProjetoViewModel.cs: Importa biblioteca, adiciona propriedade Blocos, comando cProcurarCaminhoExport, modifica método AbrirProjeto e adiciona método ProcurarCaminhoExport.
- AbrirProjeto.xaml: Atualiza DataContext para usar MainViewModel.ProjetoViewModel.
- ExportarBloco.xaml: Adiciona namespace viewmodels, bind de TextBox e botão, e ListBox para exibir Blocos.
- ExportarBloco.xaml.cs: Importa biblioteca WpfImportExport.ViewModels.
- Message.xaml.cs: Remove DataContext de ProjetoViewModel.
- WpfImportExport.csproj: Adiciona MainViewModel.cs ao projeto.

--- a/WpfImportExport.csproj
+++ b/WpfImportExport.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\RelayCommand.cs" />
     <Compile Include="Services\SiemensApiWrapper.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ProjetoViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\AbrirProjeto.xaml.cs">
