Refatoração de UI e melhorias de rastreamento
Refatoração significativa da interface do usuário, consolidando frames em um único frame `MainContent` e simplificando layouts. Alterações no comportamento de redimensionamento e estilo da janela. Adição de rastreamento de chamadas em métodos críticos e comandos. Criação da nova página `ImportarExportar` para centralizar funcionalidades de abrir, exportar e importar blocos. Atualizações no projeto para refletir essas mudanças.

--- a/WpfImportExport.csproj
+++ b/WpfImportExport.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Views\ImportarBloco.xaml.cs">
       <DependentUpon>ImportarBloco.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ImportarExportar.xaml.cs">
+      <DependentUpon>ImportarExportar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Message.xaml.cs">
       <DependentUpon>Message.xaml</DependentUpon>
     </Compile>
@@ -106,6 +109,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ImportarBloco.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ImportarExportar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
